--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.0",
+    "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -23,7 +25,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "glob": "^7.1.7",
+    "glob-all": "^3.2.1",
     "node-sass": "^4.12.0",
+    "purgecss-webpack-plugin": "^4.0.3",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
